[gd_scene load_steps=14 format=2]

[ext_resource path="res://script/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/menu/new_play_btn_2.png" type="Texture" id=2]
[ext_resource path="res://assets/menu/login.png" type="Texture" id=3]
[ext_resource path="res://assets/menu/anon_avatar.png" type="Texture" id=4]
[ext_resource path="res://assets/menu/profile.png" type="Texture" id=5]
[ext_resource path="res://assets/menu/s_background.png" type="Texture" id=6]
[ext_resource path="res://assets/menu/logo_3.png" type="Texture" id=7]
[ext_resource path="res://assets/menu/music on.png" type="Texture" id=8]
[ext_resource path="res://assets/menu/music off.png" type="Texture" id=9]
[ext_resource path="res://script/MusicToggle.gd" type="Script" id=10]
[ext_resource path="res://assets/menu/score.png" type="Texture" id=11]
[ext_resource path="res://assets/fonts/minecraftia/Minecraftia-Regular.ttf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 12 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 6 )

[node name="Cover" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.145098, 0.117647, 0.313726 )

[node name="PlayBtn" type="TextureButton" parent="."]
margin_left = 298.0
margin_top = 1085.0
margin_right = 798.0
margin_bottom = 1295.0
texture_normal = ExtResource( 2 )

[node name="LoginBtn" type="TextureButton" parent="."]
unique_name_in_owner = true
margin_left = 724.0
margin_top = 108.0
margin_right = 1114.0
margin_bottom = 288.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 3 )

[node name="Avatar" type="TextureButton" parent="."]
visible = false
margin_left = 608.0
margin_top = 25.0
margin_right = 708.0
margin_bottom = 115.0
texture_normal = ExtResource( 4 )

[node name="ScoresBtn" type="TextureButton" parent="."]
margin_left = 304.0
margin_top = 1406.0
margin_right = 804.0
margin_bottom = 1606.0
texture_normal = ExtResource( 11 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 278.0
margin_top = 437.0
margin_right = 822.0
margin_bottom = 981.0
color = Color( 0.72549, 0.596078, 0.0352941, 1 )

[node name="Logo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -119.0
margin_top = -360.0
margin_right = 119.0
margin_bottom = -120.999
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 119, 119 )
texture = ExtResource( 7 )

[node name="MusicToggle" type="TextureButton" parent="."]
margin_left = 484.0
margin_top = 1702.0
margin_right = 724.0
margin_bottom = 1902.0
rect_scale = Vector2( 0.7, 0.7 )
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
script = ExtResource( 10 )

[node name="AccountBtn" type="TextureButton" parent="."]
unique_name_in_owner = true
visible = false
margin_left = 880.0
margin_top = 104.0
margin_right = 1080.0
margin_bottom = 304.0
rect_scale = Vector2( 0.6, 0.6 )
texture_normal = ExtResource( 5 )

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
margin_left = 493.0
margin_top = 325.0
margin_right = 623.0
margin_bottom = 390.0
custom_colors/cursor_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
placeholder_text = "no."
caret_blink = true

[connection signal="pressed" from="PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="LoginBtn" to="." method="_on_LoginBtn_pressed"]
[connection signal="pressed" from="ScoresBtn" to="." method="_on_ScoresBtn_pressed"]
[connection signal="toggled" from="MusicToggle" to="MusicToggle" method="_on_MusicToggle_toggled"]
[connection signal="pressed" from="AccountBtn" to="." method="_on_AccountBtn_pressed"]
